ファイル分割と正規表現の修正、死亡通知（英語）の対応

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "minecraft-log-slack",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "send minecraft's log to slack",
-  "main": "send_slack.js",
+  "main": "index.js",
   "scripts": {
-    "test": "node send_slack.js",
-    "start": "pm2 start send_slack.js",
-    "stop": "pm2 stop send_slack.js",
-    "restart": "pm2 restart send_slack.js",
-    "watch": "pm2 start send_slack.js --watch",
+    "test": "node index.js",
+    "start": "pm2 start index.js",
+    "stop": "pm2 stop index.js",
+    "restart": "pm2 restart index.js",
+    "watch": "pm2 start index.js --watch",
     "pm2": "pm2"
   },
   "author": "roamer7038",
